# trb2-grafos

./: .gitignore  CMakeLists.txt  EXECUÇÃO.md  README.md
include/: Algoritmos.h  Aresta.h  Experimentos.h  Grafo.h  LeitorInstancia.h  Random.h  Solucao.h  UnionFind.h
instancias/: README_inst.md
instancias/dcmst/: README  bestSolutions.txt  crd100  crd101  crd102  crd103  crd104  crd105  crd106  crd107  crd108  crd109  crd300  crd301  crd302  crd303  crd304  crd305  crd306  crd307  crd308  crd309  crd500  crd501  crd502  crd503  crd504  crd505  crd506  crd507  crd508  crd509  crd700  crd701  crd702  crd703  crd704  crd705  crd706  crd707  (+79 more)
resultados/: grafo_teste.txt  tabela_resultados_final.csv
src/: Algoritmos.cpp  Aresta.cpp  Experimentos.cpp  Grafo.cpp  LeitorInstancia.cpp  Random.cpp  Solucao.cpp  Testes.cpp  UnionFind.cpp  main.cpp
